# touch-for-windows

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  parser.rs
tests/: cli.rs  test_cli.rs
