[package]
name = "touch-for-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
regex = "^1.0.5"
chrono = "0.4.23"
dateparser = "0.1.7"
filetime = "0.2.19"
