[package]
name = "touch-for-windows"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to change file timestamps on Windows."
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/manuelinfosec/touch-for-windows#readme"
homepage = "https://github.com/manuelinfosec/touch-for-windows"
repository = "https://github.com/manuelinfosec/touch-for-windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
regex = "^1.0.5"
chrono = "0.4.23"
dateparser = "0.1.7"
filetime = "0.2.19"
