[package]
name = "touch-for-windows"
version = "0.1.1"
edition = "2021"
description = "A command-line tool to create empty files (for Windows)."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/manuelinfosec/touch-for-windows#readme"
homepage = "https://github.com/manuelinfosec/touch-for-windows"
repository = "https://github.com/manuelinfosec/touch-for-windows"

exclude = [".github/*", "tests/*", ".gitignore"]

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
regex = "^1.0.5"
chrono = "0.4.23"
dateparser = "0.1.7"
filetime = "0.2.19"

[dev-dependencies]
assert_cmd = "2.0.8"
tempfile = "3.2.0"
rand = "0.8.5"

[[bin]]
name = "touch"
path = "src/main.rs"
